--- a/Joushinomimi/View/Base.lproj/Main.storyboard
+++ b/Joushinomimi/View/Base.lproj/Main.storyboard
@@ -59,13 +59,34 @@
                                     <action selector="handleLogoutButton:" destination="Acv-xF-Zc0" eventType="touchUpInside" id="aYK-pp-EfC"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTi-s5-bHy">
+                                <rect key="frame" x="57" y="268" width="300" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="Wj0-nG-4Cv"/>
+                                </constraints>
+                                <state key="normal" title="ライブラリから画像を選択" backgroundImage="btn"/>
+                                <connections>
+                                    <action selector="imageChoiceButton:" destination="Acv-xF-Zc0" eventType="touchUpInside" id="9Yk-C6-cgW"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noimage" translatesAutoresizingMaskIntoConstraints="NO" id="KtJ-zh-Hhb">
+                                <rect key="frame" x="87" y="318" width="240" height="149"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="Jr8-q8-QEZ"/>
+                                    <constraint firstAttribute="height" constant="149" id="e1G-ab-HiU"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="KtJ-zh-Hhb" firstAttribute="top" secondItem="GTi-s5-bHy" secondAttribute="bottom" constant="10" id="3Ps-cp-5lN"/>
                             <constraint firstItem="qor-mF-FBN" firstAttribute="top" secondItem="ktb-7a-ESm" secondAttribute="bottom" constant="10" id="IJ5-If-FC2"/>
+                            <constraint firstItem="GTi-s5-bHy" firstAttribute="top" secondItem="U2E-rX-H0W" secondAttribute="bottom" constant="10" id="KKy-tV-mnR"/>
+                            <constraint firstItem="KtJ-zh-Hhb" firstAttribute="centerX" secondItem="1oN-9G-JHa" secondAttribute="centerX" id="L5Z-tR-Y7l"/>
                             <constraint firstItem="ktb-7a-ESm" firstAttribute="top" secondItem="dTQ-rT-eHH" secondAttribute="top" constant="80" id="Oby-VX-U3o"/>
                             <constraint firstItem="ktb-7a-ESm" firstAttribute="centerX" secondItem="1oN-9G-JHa" secondAttribute="centerX" id="SBS-Jo-sur"/>
                             <constraint firstItem="U2E-rX-H0W" firstAttribute="centerX" secondItem="1oN-9G-JHa" secondAttribute="centerX" id="Z9h-bR-Y8K"/>
+                            <constraint firstItem="GTi-s5-bHy" firstAttribute="centerX" secondItem="1oN-9G-JHa" secondAttribute="centerX" id="a2n-xx-aAG"/>
                             <constraint firstItem="U2E-rX-H0W" firstAttribute="top" secondItem="qor-mF-FBN" secondAttribute="bottom" constant="10" id="axn-gZ-MP9"/>
                             <constraint firstItem="qor-mF-FBN" firstAttribute="centerX" secondItem="1oN-9G-JHa" secondAttribute="centerX" id="rFf-PH-wYe"/>
                         </constraints>
@@ -73,6 +94,7 @@
                     </view>
                     <connections>
                         <outlet property="displayNameTextField" destination="ktb-7a-ESm" id="Icn-ea-w09"/>
+                        <outlet property="imageView" destination="KtJ-zh-Hhb" id="KYL-re-I1d"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tzg-4F-dfi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -345,57 +367,24 @@
                                     <action selector="handleCreateAccountButton:" destination="WMF-0T-a95" eventType="touchUpInside" id="HFH-uT-7a5"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTi-s5-bHy">
-                                <rect key="frame" x="57" y="586" width="300" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="vlg-Mf-xYK"/>
-                                </constraints>
-                                <state key="normal" title="ライブラリから画像を選択" backgroundImage="btn"/>
-                                <connections>
-                                    <action selector="imageChoiceButton:" destination="WMF-0T-a95" eventType="touchUpInside" id="rsu-JD-vA3"/>
-                                </connections>
-                            </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noimage" translatesAutoresizingMaskIntoConstraints="NO" id="KtJ-zh-Hhb">
-                                <rect key="frame" x="87" y="427" width="240" height="149"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="Jr8-q8-QEZ"/>
-                                    <constraint firstAttribute="height" constant="149" id="e1G-ab-HiU"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="アイコン画像" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jUk-DU-emG">
-                                <rect key="frame" x="57" y="396" width="300" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="AnV-dO-vgK"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="bBu-Jz-jOc" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="0F8-6W-t4a"/>
                             <constraint firstItem="G3F-JS-t73" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="3Pe-zn-6VE"/>
-                            <constraint firstItem="jUk-DU-emG" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="6C6-XN-fE5"/>
                             <constraint firstItem="fEF-t3-GAD" firstAttribute="top" secondItem="Huu-kp-zcP" secondAttribute="top" constant="80" id="6NM-uy-PHG"/>
-                            <constraint firstItem="KtJ-zh-Hhb" firstAttribute="top" secondItem="jUk-DU-emG" secondAttribute="bottom" constant="10" id="FPQ-mr-6Da"/>
                             <constraint firstItem="G25-Jv-iCH" firstAttribute="top" secondItem="LgN-Ze-S2L" secondAttribute="bottom" constant="10" id="N1n-05-mEO"/>
                             <constraint firstItem="bBu-Jz-jOc" firstAttribute="top" secondItem="fEF-t3-GAD" secondAttribute="bottom" constant="10" id="O3k-bc-Vsi"/>
                             <constraint firstItem="G25-Jv-iCH" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="PsU-HY-ZKf"/>
                             <constraint firstItem="G3F-JS-t73" firstAttribute="top" secondItem="G25-Jv-iCH" secondAttribute="bottom" constant="10" id="WMU-r2-qB4"/>
-                            <constraint firstItem="GTi-s5-bHy" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="YVT-gf-tuH"/>
-                            <constraint firstItem="GTi-s5-bHy" firstAttribute="top" secondItem="KtJ-zh-Hhb" secondAttribute="bottom" constant="10" id="eWp-La-BEg"/>
-                            <constraint firstItem="KtJ-zh-Hhb" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="fWO-cj-w92"/>
                             <constraint firstItem="LgN-Ze-S2L" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="gjo-wK-PAE"/>
                             <constraint firstItem="LgN-Ze-S2L" firstAttribute="top" secondItem="bBu-Jz-jOc" secondAttribute="bottom" constant="10" id="i4P-7p-7IX"/>
                             <constraint firstItem="fEF-t3-GAD" firstAttribute="centerX" secondItem="FIK-V8-cpH" secondAttribute="centerX" id="nZx-CM-YFD"/>
-                            <constraint firstItem="jUk-DU-emG" firstAttribute="top" secondItem="G3F-JS-t73" secondAttribute="bottom" constant="50" id="nx8-Ah-g4y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Huu-kp-zcP"/>
                     </view>
                     <connections>
                         <outlet property="displayNameTextField" destination="LgN-Ze-S2L" id="JlV-xb-IPN"/>
-                        <outlet property="imageView" destination="KtJ-zh-Hhb" id="FA1-TD-2Dg"/>
                         <outlet property="mailAddressTextField" destination="fEF-t3-GAD" id="JuG-H9-MAL"/>
                         <outlet property="passwordTextField" destination="bBu-Jz-jOc" id="Hcm-n5-9VH"/>
                     </connections>
