--- a/Joushinomimi/View/PostTableViewCell.xib
+++ b/Joushinomimi/View/PostTableViewCell.xib
@@ -31,7 +31,7 @@
                         <state key="normal" title="Button" image="like_none"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3p4-Uv-GAA">
-                        <rect key="frame" x="30" y="419" width="318" height="100"/>
+                        <rect key="frame" x="110" y="419" width="238" height="100"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -51,20 +51,29 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RVu-zW-Dms">
+                        <rect key="frame" x="30" y="419" width="70" height="70"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="70" id="0YR-OG-ukh"/>
+                            <constraint firstAttribute="height" constant="70" id="6ag-Iu-BPs"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="RVu-zW-Dms" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="2Xk-cf-W7W"/>
+                    <constraint firstItem="RVu-zW-Dms" firstAttribute="top" secondItem="7zv-Ye-JY9" secondAttribute="bottom" constant="10" id="3vC-W4-RID"/>
                     <constraint firstItem="3p4-Uv-GAA" firstAttribute="top" secondItem="7zv-Ye-JY9" secondAttribute="bottom" constant="10" id="5k3-DF-sOa"/>
                     <constraint firstItem="mnj-D5-4C0" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="5qV-SH-i6h"/>
                     <constraint firstAttribute="trailingMargin" secondItem="5eT-rJ-Ah0" secondAttribute="trailing" constant="10" id="6er-Or-toC"/>
                     <constraint firstAttribute="trailingMargin" secondItem="mnj-D5-4C0" secondAttribute="trailing" id="CNm-YV-ieQ"/>
                     <constraint firstItem="MUn-Qx-Ivc" firstAttribute="leading" secondItem="7zv-Ye-JY9" secondAttribute="trailing" constant="10" id="DGt-m4-vXf"/>
                     <constraint firstItem="5eT-rJ-Ah0" firstAttribute="centerY" secondItem="7zv-Ye-JY9" secondAttribute="centerY" id="FvV-SZ-C2E"/>
+                    <constraint firstItem="3p4-Uv-GAA" firstAttribute="leading" secondItem="RVu-zW-Dms" secondAttribute="trailing" constant="10" id="Ixs-EK-Dfe"/>
                     <constraint firstItem="7zv-Ye-JY9" firstAttribute="top" secondItem="mnj-D5-4C0" secondAttribute="bottom" constant="10" id="Owf-Ye-256"/>
                     <constraint firstItem="5eT-rJ-Ah0" firstAttribute="leading" secondItem="MUn-Qx-Ivc" secondAttribute="trailing" constant="10" id="Tol-R0-8lN"/>
                     <constraint firstAttribute="bottomMargin" secondItem="3p4-Uv-GAA" secondAttribute="bottom" constant="10" id="Vya-hY-bd5"/>
                     <constraint firstItem="mnj-D5-4C0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="avj-5L-IKC"/>
                     <constraint firstItem="7zv-Ye-JY9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="kLn-PL-Cgj"/>
-                    <constraint firstItem="3p4-Uv-GAA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="kMc-80-nwe"/>
                     <constraint firstItem="MUn-Qx-Ivc" firstAttribute="centerY" secondItem="7zv-Ye-JY9" secondAttribute="centerY" id="mXI-1W-hA5"/>
                     <constraint firstAttribute="trailingMargin" secondItem="3p4-Uv-GAA" secondAttribute="trailing" constant="10" id="pWb-zf-J0l"/>
                 </constraints>
@@ -76,6 +85,7 @@
                 <outlet property="likeButton" destination="7zv-Ye-JY9" id="YmQ-EE-n92"/>
                 <outlet property="likeLabel" destination="MUn-Qx-Ivc" id="6o0-Bq-cQS"/>
                 <outlet property="postImageView" destination="mnj-D5-4C0" id="gsN-1n-kQc"/>
+                <outlet property="profileImage" destination="RVu-zW-Dms" id="rrQ-R5-EgV"/>
             </connections>
             <point key="canvasLocation" x="78.260869565217391" y="95.089285714285708"/>
         </tableViewCell>
