--- a/Joushinomimi/Model/Base.lproj/Main.storyboard
+++ b/Joushinomimi/Model/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                     <action selector="imageChoiceButton:" destination="Acv-xF-Zc0" eventType="touchUpInside" id="9Yk-C6-cgW"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultProfileImage" translatesAutoresizingMaskIntoConstraints="NO" id="KtJ-zh-Hhb">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="003.png" translatesAutoresizingMaskIntoConstraints="NO" id="KtJ-zh-Hhb">
                                 <rect key="frame" x="132" y="373" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Jr8-q8-QEZ"/>
@@ -491,6 +491,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="003.png" width="185" height="185"/>
         <image name="btn" width="300" height="40"/>
         <image name="defaultProfileImage" width="600" height="600"/>
         <image name="photo" catalog="system" width="64" height="46"/>
